# Evolution

./: CMakeLists.txt  README.md
Snake/: CMakeLists.txt  DummySnakeKernel.h  GameObjectLocation.h  IGameModelNotifications.cpp  IGameModelNotifications.h  IGameModelObserver.h  IGameObject.h  ISnakeKernel.cpp  ISnakeKernel.h  Snake.cpp  Snake.h  SnakeGameCollisionResolver.cpp  SnakeGameCollisionResolver.h  TiledGameModel.cpp  TiledGameModel.h  game_defs.h  main.cpp
Snake/Abstract/: ICollisionResolver.h  IGameFinalizer.h  IGameModelNotifications.cpp  IGameObject.h  TiledGameModel.cpp  TiledGameModel.h  TiledGameModelImpl.h
Snake/Finalizers/: FinalizeIfNObjectsRemain.cpp  FinalizeIfNObjectsRemain.h  FinalizeOnDeath.cpp  FinalizeOnDeath.h
Support/: CMakeLists.txt  TiledMap.h  TiledMapImpl.h  debug.h
Support/TiledMap/: ProxyRow.h  RegionAccess.h  RegionAccessImpl.h  RegionIterator.h  TiledMap.h  TiledMapImpl.h  TiledMapTraits.h
Support/TiledMap/test/: CMakeLists.txt  test_tiled_map.cpp
Support/test/: test_tiled_map.cpp
